--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT& nodemon server",
-    "prod": "SET NODE_ENV=PRODUCTION& nodemon server"
+    "prod": "SET NODE_ENV=PRODUCTION& nodemon server",
+    "dev": "SET NODE_ENV=DEVELOPMENT& nodemon server"
   },
   "keywords": [],
   "author": "",
