--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.28.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "node-schedule": "^2.1.0",
