--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.1.7",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
+    "stripe": "^11.1.0",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
